--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name= backend
 server.servlet.context-path= /api
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:5432/myDB
+spring.datasource.url= jdbc:postgresql://postgres.cdeimykgq82v.us-east-1.rds.amazonaws.com:5432/postgres
 spring.datasource.username= postgres
-spring.datasource.password= root
+spring.datasource.password= naz123456789
 spring.jpa.hibernate.ddl-auto=  update
