--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,13 +3,16 @@ server {
 
     # Serve the React app
     location / {
-        root   /usr/share/nginx/html;
-        try_files $uri /index.html;
+        proxy_pass http://100.26.45.122:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Forward API requests to the Spring Boot backend
     location /api/ {
-        proxy_pass http://backend:8080;
+        proxy_pass http://3.84.186.165:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
